# autoview

./: Cargo.toml  LICENSE.md  README.md
src/: interface.rs  main.rs  mime.rs  pager.rs  programs.rs  styling.rs
src/backends/: binfile.rs  directory.rs  image.rs  mod.rs  text.rs
src/styling/: mod.rs  names.rs  stylesheet.rs  text.rs
src/views/: meta.rs  mod.rs
