[package]
name = "autoview"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Michael Ekstrand <md@ekstrandom.net>"]

[dependencies]
# logging and error handling
log = "^0.4.22"
thiserror = "^1.0.61"
anyhow = "^1.0.86"
stderrlog = "^0.6"

# CLI and UX support
clap = { version = "^4.5", features = ["derive"] }
minus = "^5.6"

# file format support
mime = "^0.3"
xdg-mime = "^0.4"
flate2 = "^1.0"
zip = "^2.1.3"
