[package]
name = "autoview"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Michael Ekstrand <md@ekstrandom.net>"]

[dependencies]
# logging and error handling
log = "^0.4.22"
thiserror = "^1.0.61"
anyhow = "^1.0.86"
stderrlog = "^0.6"
colorchoice = "1"
anstyle = "1"

shared-mime-embedded = { git = "https://github.com/mdekstrand/shared-mime" }

# CLI and UX support
clap = { version = "^4.5", features = ["derive"] }
minus = "^5.6"

# compression and archive support
flate2 = "^1.0"
zip = "^2.1.3"
bzip2 = "^0.4.4"
zstd = "^0.13"
lz4_flex = "^0.11"
snap = "1"
liblzma = "^0.3"
